# evo-king

./: .gitignore  CLAUDE.md  Cargo.toml  Cargo.toml.bak  README.md  install.sh  pre_push.sh  run.sh  update.sh
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-02-24-release-run-upgrade-design.md
src/: agent_manager.rs  config_watcher.rs  cron_manager.rs  doctor.rs  error.rs  gateway_manager.rs  main.rs  memory_db.rs  pipeline_coordinator.rs  socket_server.rs  state.rs  system_discovery.rs  task_db.rs  trace_api.rs  trace_db.rs  trace_receiver.rs
