[package]
name = "evo-king"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "evo-king"
path = "src/main.rs"

[dependencies]
axum          = "0.7"
socketioxide  = "0.14"
tokio         = { version = "1", features = ["full"] }
notify        = "8"
libsql        = "0.6"
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"
chrono        = { version = "0.4", features = ["serde"] }
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender   = "0.2"
anyhow        = "1.0"
clap          = { version = "4", features = ["derive"] }
thiserror     = "2.0"
reqwest       = { version = "0.12", features = ["json"] }
uuid          = { version = "1.0", features = ["v4"] }
tower-http    = { version = "0.6", features = ["cors", "fs"] }
evo-common    = { path = "../evo-common" }
portable-pty  = "0.8"
